# device-reports

./: .env  docker-compose.yaml  mypy.ini  pyproject.toml  reports.db
.github/workflows/: ci.yaml
src/reports/: __main__.py
src/reports/application/common/: commition_behavior.py  event_date_setter_behavior.py  event_id_generation_behavior.py  event_publishing_behavior.py  markers.py
src/reports/application/models/: device.py  media.py  report.py
src/reports/application/ports/: device_gateway.py  events.py  id_generator.py  media_gateway.py  report_gateway.py  report_pdf_generator.py  transaction.py
src/reports/bootstrap/: config.py  containers.py  providers.py
src/reports/bootstrap/entrypoints/: api.py  cli.py  sio.py  tasks.py
src/reports/domain/: types.py
src/reports/domain/media/: events.py  factory.py  media.py  repository.py  value_objects.py
src/reports/domain/report/: factory.py  report.py  repository.py
src/reports/domain/shared/: entity.py  events.py  value_object.py
src/reports/infrastructure/: events.py  hatchet_client.py  media_factory.py  report_factory.py  report_proxy.py  utc_time_provider.py  uuid7_id_generator.py
src/reports/infrastructure/http/: http_device_gateway.py  http_glpi_auth_client.py
src/reports/infrastructure/pdf_reports/: generate_pdf_report.py  pdf_report_behavior.py  shemas.py  templates_loader.py
src/reports/infrastructure/persistence/: mappings.py  sql_tables.py
src/reports/presentation/api/: exception_handlers.py  htpp_identity_provider.py
src/reports/presentation/cli/: server_starting.py  worker.py
(+21 files in other folders)
