[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "glpi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=14.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "bazario>=0.4.2",
    "click>=8.1.8",
    "dishka>=1.5.3",
    "fastapi>=0.115.12",
    "hatchet>=1.4.0",
    "hatchet-sdk>=1.6.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mypy>=1.15.0",
    "python-socketio[asgi]>=5.13.0",
    "sqlalchemy>=2.0.40",
    "structlog>=25.3.0",
    "tenacity>=9.1.2",
    "types-aiobotocore[essential]>=2.21.1",
    "uuid7>=0.1.0",
    "uvicorn>=0.34.1",
    "weasyprint>=65.1",
]

[project.scripts]
reports = "reports.bootstrap.entrypoints.cli:main"
